Collections
	- Delete entries from a collection
		LFNUtils.removeFromCollection() - costing - 2011-06-27