@@ -1,3 +1,6 @@
+Metadata
+	- basic find implemented in LFNUtils - costing - 2011-06-28
+
 Collections
 	- Delete entries from a collection
 		LFNUtils.removeFromCollection() - costing - 2011-06-27
